# grave-border-detection

./: .cursorrules  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  hpo_dem_ablation.db  hpo_dem_comparison.db  pyproject.toml
.claude/commands/: create-plan.md  implement-plan.md  iterate-plan.md  prepare-commit.md
configs/: config.yaml
configs/augmentation/: default.yaml
configs/data/: real.yaml  rgb_dem.yaml  rgb_only.yaml  synthetic.yaml
configs/experiment/: baseline_rgb.yaml  debug.yaml  full.yaml
configs/hpo/: default.yaml  dem_ablation.yaml  dem_comparison.yaml  pilot.yaml
configs/model/: unet_resnet34.yaml
configs/training/: default.yaml
data/: quick_inventory.json
data/synthetic/: synthetic_dataset_summary.json
docs/: Project_Description.md  architecture_proposal.md  data-inventory.md  implementation_plan.md  python-rules.md
docs/plans/: 2026-01-27-experiment-tracking-hpo.md  2026-01-28-dem-preprocessing-pipeline.md
scripts/: analyze_data.py  analyze_dem_normalization.py  precompute_dem_normalization.py  quick_inventory.py  run_hpo.sh  view_hpo.sh  visualize_all_cemeteries.py  visualize_dem_normalization.py  visualize_full_cemetery.py
src/grave_border_detection/: __init__.py  hpo.py  inference.py  postprocessing.py  train.py
src/grave_border_detection/callbacks/: __init__.py  checkpoint_logger.py  full_cemetery_viz.py  image_logger.py
src/grave_border_detection/data/: __init__.py  datamodule.py  dataset.py  synthetic.py  tiling.py
src/grave_border_detection/models/: __init__.py  segmentation.py
src/grave_border_detection/preprocessing/: __init__.py  dem_normalization.py  prepare_real_data.py
src/grave_border_detection/utils/: dataset_hash.py
tests/: __init__.py
tests/unit/: test_configs.py  test_pipeline.py
tests/unit/preprocessing/: test_dem_normalization.py
